kubernetes/ingress/cluster-wide-routing/aqua-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqua-svc
spec:
  selector:
    app: aqua
  ports:
  - port: 80
