kubernetes/ingress/cluster-wide-routing/maroon-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: maroon-svc
spec:
  selector:
    app: maroon
  ports:
  - port: 80
