kubernetes/ingress/cluster-wide-routing/olive-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: olive-svc
spec:
  selector:
    app: olive
  ports:
  - port: 80
