kubernetes/ingress/cluster-wide-routing/maroon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maroon-ingress
spec:
  rules:
  - host: maroon.k8slab.playpit.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: maroon-svc
            port: 
              number: 80
